test/Fail/Erased-modules-8.err
Erased-modules-8.agda:10.5-9: error: [DefinitionIsErased]
Identifier true is declared erased, so it cannot be used here
when checking that the expression true has type Bool
